--- a/src/main/resources/com/liuxz/request/18n/fr_zh_CN.properties
+++ b/src/main/resources/com/liuxz/request/18n/fr_zh_CN.properties
@@ -1,48 +1,49 @@
 language=zh
-CoffeeMe=请作者喝杯咖啡 ~☕
-CurrentDomain=当前域名
-CurrentEnv=当前环境
-CurrentProject=当前项目名
-CustomerDataMapping=自定义类型映射
-DateTypeConfig=数据类型映射
-DefaultDataMapping=默认类型映射
-Delimiter=分隔符
-enable=开启
-Env=环境
-EnvProject=环境 / 项目
-EnvProjectTtt=项目、环境对应的url
-EnvTtt=环境名,如local、dev
-Length=长度
-ManageConfig=管理配置
-OtherConfig=其他配置
-OtherConfigTitle1=控制器url固定变量替换
-OtherConfigTitle2=比如将/api/${api-module}/xx转成成/api/basic/xx
-ProjectName=项目名
-ProjectNameTtt=项目名,如用户模块
-RequestName=方法描述
-SaveRequest=保存请求
-StarDocument=文档
-Strategy=策略
-StringGeneratorConfig=String生成配置
-ToggleRequest=展示/隐藏 request
-ToggleResponse=展示/隐藏 response
-UrlReplaceConfig=Url替换配置
-msg_UrlNull=Url不能为空
-warnItem1=> 请优先添加项目名和环境名,并设置对应的域名
-warnItem2=> 请选择环境和项目名(注意域名不能为空)
-msg_currentDomain_null=当前域名不能为空
-regenerate=重新生成
-SaveSuccess=保存成功
-CollectionSearchHelp=保存的请求是根据方法名保存的，如果你在保存请求以后修改了方法名,那就无法被定位(不支持相同类名相同方法名的导航)
-button.addModuleGroup=添加模块group
-header.group.manage=Header分组管理
-header.text.example=必须是json格式,如{"token":"token_dev"}
-type.to.search=输入关键字搜索Api,回车或者双击定位api
-IgnoreDataMapping=忽略类型映射
-IgnoreDataMappingDesc=配置后,此类型参数将不再解析
-filter.all=全选
-filter.none=清除
-filter.invert=反选
-whatsnew=最新变化
-button.exportToPostman=导出到postman
-GlobalRequestHeader=全局请求头
+CoffeeMe=\u8BF7\u4F5C\u8005\u559D\u676F\u5496\u5561 ~\u2615
+CurrentDomain=\u5F53\u524D\u57DF\u540D
+CurrentEnv=\u5F53\u524D\u73AF\u5883
+CurrentProject=\u5F53\u524D\u9879\u76EE\u540D
+CustomerDataMapping=\u81EA\u5B9A\u4E49\u7C7B\u578B\u6620\u5C04
+DateTypeConfig=\u6570\u636E\u7C7B\u578B\u6620\u5C04
+DefaultDataMapping=\u9ED8\u8BA4\u7C7B\u578B\u6620\u5C04
+Delimiter=\u5206\u9694\u7B26
+enable=\u5F00\u542F
+Env=\u73AF\u5883
+EnvProject=\u73AF\u5883 / \u9879\u76EE
+EnvProjectTtt=\u9879\u76EE\u3001\u73AF\u5883\u5BF9\u5E94\u7684url
+EnvTtt=\u73AF\u5883\u540D,\u5982local\u3001dev
+Length=\u957F\u5EA6
+ManageConfig=\u7BA1\u7406\u914D\u7F6E
+OtherConfig=\u5176\u4ED6\u914D\u7F6E
+OtherConfigTitle1=\u63A7\u5236\u5668url\u56FA\u5B9A\u53D8\u91CF\u66FF\u6362
+OtherConfigTitle2=\u6BD4\u5982\u5C06/api/${api-module}/xx\u8F6C\u6210\u6210/api/basic/xx
+ProjectName=\u9879\u76EE\u540D
+ProjectNameTtt=\u9879\u76EE\u540D,\u5982\u7528\u6237\u6A21\u5757
+RequestName=\u65B9\u6CD5\u63CF\u8FF0
+SaveRequest=\u4FDD\u5B58\u8BF7\u6C42
+ApiWikiRequest=\u63A5\u53E3\u6587\u6863
+StarDocument=\u6587\u6863
+Strategy=\u7B56\u7565
+StringGeneratorConfig=String\u751F\u6210\u914D\u7F6E
+ToggleRequest=\u5C55\u793A/\u9690\u85CF request
+ToggleResponse=\u5C55\u793A/\u9690\u85CF response
+UrlReplaceConfig=Url\u66FF\u6362\u914D\u7F6E
+msg_UrlNull=Url\u4E0D\u80FD\u4E3A\u7A7A
+warnItem1=> \u8BF7\u4F18\u5148\u6DFB\u52A0\u9879\u76EE\u540D\u548C\u73AF\u5883\u540D,\u5E76\u8BBE\u7F6E\u5BF9\u5E94\u7684\u57DF\u540D
+warnItem2=> \u8BF7\u9009\u62E9\u73AF\u5883\u548C\u9879\u76EE\u540D(\u6CE8\u610F\u57DF\u540D\u4E0D\u80FD\u4E3A\u7A7A)
+msg_currentDomain_null=\u5F53\u524D\u57DF\u540D\u4E0D\u80FD\u4E3A\u7A7A
+regenerate=\u91CD\u65B0\u751F\u6210
+SaveSuccess=\u4FDD\u5B58\u6210\u529F
+CollectionSearchHelp=\u4FDD\u5B58\u7684\u8BF7\u6C42\u662F\u6839\u636E\u65B9\u6CD5\u540D\u4FDD\u5B58\u7684\uFF0C\u5982\u679C\u4F60\u5728\u4FDD\u5B58\u8BF7\u6C42\u4EE5\u540E\u4FEE\u6539\u4E86\u65B9\u6CD5\u540D,\u90A3\u5C31\u65E0\u6CD5\u88AB\u5B9A\u4F4D(\u4E0D\u652F\u6301\u76F8\u540C\u7C7B\u540D\u76F8\u540C\u65B9\u6CD5\u540D\u7684\u5BFC\u822A)
+button.addModuleGroup=\u6DFB\u52A0\u6A21\u5757group
+header.group.manage=Header\u5206\u7EC4\u7BA1\u7406
+header.text.example=\u5FC5\u987B\u662Fjson\u683C\u5F0F,\u5982{"token":"token_dev"}
+type.to.search=\u8F93\u5165\u5173\u952E\u5B57\u641C\u7D22Api,\u56DE\u8F66\u6216\u8005\u53CC\u51FB\u5B9A\u4F4Dapi
+IgnoreDataMapping=\u5FFD\u7565\u7C7B\u578B\u6620\u5C04
+IgnoreDataMappingDesc=\u914D\u7F6E\u540E,\u6B64\u7C7B\u578B\u53C2\u6570\u5C06\u4E0D\u518D\u89E3\u6790
+filter.all=\u5168\u9009
+filter.none=\u6E05\u9664
+filter.invert=\u53CD\u9009
+whatsnew=\u6700\u65B0\u53D8\u5316
+button.exportToPostman=\u5BFC\u51FA\u5230postman
+GlobalRequestHeader=\u5168\u5C40\u8BF7\u6C42\u5934
